--- a/BetsDashboard/BetsDashboard.csproj
+++ b/BetsDashboard/BetsDashboard.csproj
@@ -12,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazorise.Bootstrap" Version="0.8.8.3" />
+    <PackageReference Include="Blazorise.Charts" Version="0.8.8.3" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.8.8.3" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="3.2.0-preview1.20073.1" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="3.2.0-preview1.20073.1" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.DevServer" Version="3.2.0-preview1.20073.1" PrivateAssets="all" />
