--- a/BetsDashboard/BetsDashboard.csproj
+++ b/BetsDashboard/BetsDashboard.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorDateRangePicker" Version="2.0.0" />
     <PackageReference Include="Blazorise.Bootstrap" Version="0.8.8.3" />
     <PackageReference Include="Blazorise.Charts" Version="0.8.8.3" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.8.8.3" />
