:sparkles: Start adding bet detail on day selection

--- a/BetDash/BetDash/BetDash.csproj
+++ b/BetDash/BetDash/BetDash.csproj
@@ -22,4 +22,10 @@
     </Compile>
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Update="Views\DashboardPage\BetsList\BetsList.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
