--- a/BetDash/BetDash.Android/BetDash.Android.csproj
+++ b/BetDash/BetDash.Android/BetDash.Android.csproj
@@ -73,6 +73,9 @@
     <LinkDescription Include="LinkerSettings.xml" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\FontAwesome5Brands-Regular-400.otf" />
+    <AndroidAsset Include="Assets\FontAwesome5Free-Regular-400.otf" />
+    <AndroidAsset Include="Assets\FontAwesome5Free-Solid-900.otf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
